# palapeli

./: .flatpak-manifest.json  .kde-ci.yml  .krazy  CMakeLists.txt  Mainpage.dox  Messages.sh  README  README.ARTISTS  README.PACKAGERS  TODO  TODOLIST  palapeli.categories  snapcraft.yaml
app/: CMakeLists.txt  Messages.sh  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow_p.h  manager.cpp  manager.h  minimap.cpp  minimap.h  palapeli.desktop  palapeli.knsrc  palapeli_import.desktop  palapeliui.rc  preview.cpp  preview.h  settings_appearance.ui  welcomewidget.cpp  welcomewidget.h
app/actions/: commonaction.h  createaction.cpp  createaction.h  deleteaction.cpp  deleteaction.h  exportaction.cpp  exportaction.h  importaction.cpp  loadaction.cpp  loadaction.h  resetaction.cpp
app/pics/: CMakeLists.txt  LICENSE
editor/: CMakeLists.txt  Messages.sh  README  action-addrelation.cpp  action-addrelation.h  action-removerelation.cpp  action-removerelation.h  algebra.cpp  algebra.h  main.cpp  mainwindow.cpp  mainwindow.h  manager.cpp  manager.h  mouseinteractor.cpp  mouseinteractor.h  objview.cpp  objview.h  paladesign.desktop  paladesignui.rc  points.cpp  points.h  propmodel.cpp  propmodel.h  relation.cpp  relation.h  shapes.cpp  shapes.h  view.cpp  view.h
editor/storage/: gamestorage.cpp  gamestorage.h  gamestorageattribs.cpp  gamestorageattribs.h  gamestorageitem.cpp  gamestorageitem.h
game/: CMakeLists.txt  autosaver.cpp  autosaver.h  crashrecovery.cpp  crashrecovery.h  listmenu.cpp  listmenu.h  listmenu_p.h  macros.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_p.h  manager.cpp  manager.h  minimap.cpp  minimap.h  newpuzzledialog.cpp  newpuzzledialog.h  palapeli.desktop  palapeli.kcfg  palapeliui.rc  part.cpp  part.h  pattern-abstract.cpp  pattern-abstract.h  pattern-configuration.cpp  pattern-configuration.h  pattern-rect.cpp  pattern-rect.h  pattern-rectangular.cpp  pattern-rectangular.h  pattern.cpp  pattern.h  piece.cpp  piece.h  piecerelation.cpp  piecerelation.h  preview.h  puzzlelibrary.cpp  (+20 more)
game/actions/: createaction.cpp  createaction.h  exportaction.cpp  exportaction.h  importaction.cpp  importaction.h  loadaction.cpp  loadaction.h  resetaction.cpp  resetaction.h
game/desktop/: CMakeLists.txt  palapeli.xml  palapeli_import.desktop
game/gamestorage/: gamestorage.cpp  gamestorageitem.h
game/interface/: autoscalingitem.cpp  autoscalingitem.h  exportwidget.cpp  exportwidget.h  importwidget.cpp  importwidget.h  interfacemanager.cpp  interfacemanager.h  loadwidget.cpp  loadwidget.h  onscreenanimator.cpp  onscreenanimator.h  onscreendialog.cpp  onscreendialog.h  onscreenwidget.cpp  onscreenwidget.h  savewidget.cpp  savewidget.h
game/pics/: CMakeLists.txt
goldberg-slicer/: CMakeLists.txt  INSTALL  Messages.sh  README  TODO  make-tarball  palapeli_goldbergslicer.desktop
lib/: CMakeLists.txt  FindPalapeli.cmake  Mainpage.dox  gameloader.cpp  gameloader.h  gameloader_p.h  macros.h  palapeli.kcfg  palapelipatternplugin.desktop  pattern-configuration.cpp  pattern-configuration.h  pattern-executor.cpp  pattern-executor.h  pattern-plugin.cpp  pattern-plugin.h  pattern-rectangular.cpp  pattern-rectangular.h  pattern-trader.cpp  pattern-trader.h  pattern.cpp  pattern.h  textprogressbar.cpp  textprogressbar.h  variantmapper.h
lib/actions/: commonaction.cpp  (+17 more)
libpala/: CMakeLists.txt  Mainpage.dox  PalaConfig.cmake.in  libpala-config.cmake  libpala-slicerplugin.desktop  libpalamacros.h  slicer.cpp  slicer.h  slicerjob.cpp  slicerjob.h  slicermode.cpp  slicermode.h  slicerproperty.cpp  slicerproperty.h  slicerpropertyset.cpp  slicerpropertyset.h
libpala-example/: CMakeLists.txt  README  myslicer.cpp  myslicer.desktop  myslicer.h
mime/: CMakeLists.txt  palapeli-mimetypes.xml  palapeli_servicemenu.desktop  palathumbcreator.desktop  palathumbcreator.json  thumbnail-creator.cpp  thumbnail-creator.h
part/: CMakeLists.txt  palapelipart.desktop  palapelipart.rc  part.cpp  part.h
patterns/: CMakeLists.txt  palapeli_hexagonpattern.desktop  palapeli_jigsawpattern.desktop  palapeli_rectangularpattern.desktop  pattern-hexagon.cpp  pattern-hexagon.h  pattern-jigsaw.cpp  pattern-jigsaw.h  pattern-rectangular.cpp  pattern-rectangular.h
puzzles/: CMakeLists.txt  castle-maintenon.conf  castle-maintenon.desktop  castle-maintenon.pala  castle-maintenon.puzzle  cincinnati-bridge.conf  cincinnati-bridge.desktop  cincinnati-bridge.pala  cincinnati-bridge.puzzle  citrus-fruits.conf  citrus-fruits.desktop  citrus-fruits.pala  citrus-fruits.puzzle  default-collection.conf  european-honey-bee.conf  european-honey-bee.desktop  european-honey-bee.pala  european-honey-bee.puzzle  make-puzzles.sh  panther-chameleon-female.conf  panther-chameleon-female.desktop  panther-chameleon-female.pala  panther-chameleon-female.puzzle
slicers/: CMakeLists.txt  palapeli_goldbergslicer.desktop  palapeli_goldbergslicer.json  palapeli_jigsawslicer.desktop  palapeli_jigsawslicer.json  palapeli_rectslicer.desktop  palapeli_rectslicer.json  palapeli_svgslicer_block.desktop  palapeli_svgslicer_curved.desktop  palapeli_svgslicer_jigsaw.desktop  slicer-jigsaw.cpp  slicer-jigsaw.h  slicer-rect.cpp  slicer-rect.h  slicer-svg-block.cpp  slicer-svg-block.h  slicer-svg-curved.cpp  slicer-svg-curved.h  slicer-svg-generic.cpp  slicer-svg-jigsaw.cpp  slicer-svg-jigsaw.h
src/: CMakeLists.txt  Messages.sh  cleanupthread.cpp  cleanupthread.h  dialognew.ui  firsttimehelper.cpp  firsttimehelper.h  importhelper.cpp  importhelper.h  listmenu.cpp  listmenu.h  loadaction.cpp  loadaction.h  main.cpp  mainwindow.cpp  mainwindow.h  manager.cpp  manager.h  minimap.cpp  minimap.h  org.kde.palapeli.appdata.xml  org.kde.palapeli.desktop  palapeli-collectionui.rc  palapeli-libraryui.rc  palapeli-puzzletableui.rc  palapeli.desktop  palapeli.kcfg  palapeli.notifyrc  palapeli.qrc  palapeli_servicemenu.desktop  palapeliui.rc  part.cpp  part.h  pattern-abstract.cpp  pattern-abstract.h  pattern-rect.cpp  pattern-rect.h  piece.cpp  piece.h  preview.cpp  (+14 more)
tools/: CMakeLists.txt  libpala-puzzlebuilder.cpp  panther-chameleon-female.conf
(+304 files in other folders)
